<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/instruct_fund"
    android:fillViewport="true">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/transparente_white_bramolde"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_above="@+id/bt_iniciar">

        <!--android:layout_marginTop="50dp"-->

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

        <!--<CircularTextView
                android:id="@+id/num_1"
                android:layout_width="@dimen/ins_circular_dim"
                android:layout_height="@dimen/ins_circular_dim"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/ins_num_1"
                android:textStyle="bold"
                android:textColor="@color/white_bramolde"
                android:textSize="@dimen/ins_num_size" />-->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:src="@drawable/instrucoes_one"
                />

            <TextView
                android:id="@+id/text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/ins_text_1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ins_text_size" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:src="@drawable/instrucoes_two"
                />

            <TextView
                android:id="@+id/text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/ins_text_2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ins_text_size" />



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:src="@drawable/instrucoes_three"
                />

            <TextView
                android:id="@+id/text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/ins_text_3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ins_text_size" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:src="@drawable/instrucoes_four"
                />

            <TextView
                android:id="@+id/text_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/ins_text_4"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ins_text_size" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:src="@drawable/instrucoes_five"
                />

            <TextView
                android:id="@+id/text_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/ins_text_5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ins_text_size" />
        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/bt_iniciar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center"
        android:background="@drawable/buttonshape2"
        android:text="INICIAR"
        android:textColor="@color/white_bramolde"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>

